Alignment Bugs fixed

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -69,7 +69,7 @@ footer {
   align-items: left;
   margin-left: auto;
   margin-right: 170px;
-  color: lightgreen;
+  color: green;
   padding-left: 20px;
 
 }
